8/23/10 migrate PrecisionDecimal to phetcommon
8/23/10 migrate HTMLCheckBox to phetcommon
8/23/10 misc javadoc and cleanup
8/23/10 this sim doesn't need a clock, remove clock from model interfaces, pause clock in all modules
# 0.00.23 (43391) Aug 23, 2010
8/23/10 handle disabling of water icon next to "Show Water" check box
8/23/10 simplify AbstractConcentrationGraphNode by removing unnecessary inner classes and unused features
8/23/10 change "Magnifying Glass" radio button to "Molecules"
8/23/10 change "Show H2O molecules" check box to "Show Water"
8/23/10 change "Concentration Graph" radio button to "Concentration"
8/23/10 change "Test Solution" to "Introduction"
8/23/10 modify conductivity tester's brightness model to include a "min brightness" for neutral pH, set to 0.05
8/19/10 position radio button icons close to their associated labels
# 0.00.22 (43306) Aug 19, 2010
8/19/10 fiddle with horizontal spacing between bars so that they are close to being aligned with terms in reaction equations
8/19/10 center 3 bars in concentration graph
8/19/10 restructure the scenegraph for concentration graph, so that it will be easier to change bar locations
8/19/10 tweaks to spacing and justification in control panels
8/19/10 change magnifying glass icon to show solution color and some molecules
8/19/10 add icon for "Show H2O Molecules" check box
8/19/10 reduce width of icons for pH Paper and Concentration Graph
8/19/10 add icon next to "Liquid" radio button
8/19/10 crop transparent pixels around lightBulb_icon.png
8/17/10 change "neither" radio button to "Liquid"
8/16/10 workaround for canvas scaling problem, make canvas rendering size square (900x900)
8/16/10 center everything in the play area as canvas is resized
8/16/10 love letter to future developers in implementation-notes.txt
8/16/10 first pass at high-level model description in model.txt
8/16/10 delete portions of the model related to molecule counts, not used in this sim