@@ -1,13 +1,19 @@
 /* Copyright 2010, University of Colorado */
 
-package edu.colorado.phet.acidbasesolutions.module.customsolution;
+package edu.colorado.phet.acidbasesolutions.module;
+
+import java.awt.Insets;
 
 import edu.colorado.phet.acidbasesolutions.constants.ABSStrings;
+import edu.colorado.phet.acidbasesolutions.controls.CustomSolutionControls;
+import edu.colorado.phet.acidbasesolutions.controls.TestControls;
+import edu.colorado.phet.acidbasesolutions.controls.ViewControls;
 import edu.colorado.phet.acidbasesolutions.model.ABSModel;
 import edu.colorado.phet.acidbasesolutions.model.AqueousSolution;
 import edu.colorado.phet.acidbasesolutions.model.ABSModel.SolutionFactory;
 import edu.colorado.phet.acidbasesolutions.model.WeakAcidSolution.CustomWeakAcidSolution;
-import edu.colorado.phet.acidbasesolutions.module.ABSModule;
+import edu.colorado.phet.common.phetcommon.model.Resettable;
+import edu.colorado.phet.common.phetcommon.view.ControlPanel;
 
 /**
  * "Custom Solution" module.
@@ -17,7 +23,7 @@ import edu.colorado.phet.acidbasesolutions.module.ABSModule;
 public class CustomSolutionModule extends ABSModule {
     
     private final ABSModel model;
-    private final CustomSolutionCanvas canvas;
+    private final ABSCanvas canvas;
     private final CustomSolutionControlPanel controlPanel;
     
     public CustomSolutionModule( boolean dev ) {
@@ -30,7 +36,7 @@ public class CustomSolutionModule extends ABSModule {
         };
         model = new ABSModel( solutionFactory );
         
-        canvas = new CustomSolutionCanvas( model, dev );
+        canvas = new ABSCanvas( model, dev );
         setSimulationPanel( canvas );
         
         controlPanel = new CustomSolutionControlPanel( this, model );
@@ -42,5 +48,17 @@ public class CustomSolutionModule extends ABSModule {
     @Override
     public void reset() {
         model.reset();
+    }
+    
+    // Control panel for this module.
+    private static class CustomSolutionControlPanel extends ControlPanel {
+
+        public CustomSolutionControlPanel( Resettable resettable, ABSModel model ) {
+            setInsets( new Insets( 2, 5, 2, 5 ) );
+            addControlFullWidth( new CustomSolutionControls( model ) );
+            addControlFullWidth( new TestControls( model ) );
+            addControlFullWidth( new ViewControls( model ) );
+            addResetAllButton( resettable );
+        }
     }
 }
