@@ -1,18 +1,0 @@
-/* Copyright 2010, University of Colorado */
-
-package edu.colorado.phet.acidbasesolutions.module.testsolution;
-
-import edu.colorado.phet.acidbasesolutions.model.ABSModel;
-import edu.colorado.phet.acidbasesolutions.module.ABSCanvas;
-
-/**
- * Canvas for the "Test Solution" module.
- *
- * @author Chris Malley (cmalley@pixelzoom.com)
- */
-public class TestSolutionCanvas extends ABSCanvas {
-
-    public TestSolutionCanvas( ABSModel model, boolean dev ) {
-        super( model, dev );
-    }
-}
